--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -2,28 +2,63 @@
   display: flex;
   flex: 0.35;
   height: 100vh;
-  background-color: gray;
+  background-color: #363940; //後でhomeに移動させる
 
   .sidebarLeft {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 15px;
-    background-color: black;
+    background-color: #000000;
     padding: 7px 15px;
 
     .serverIcon {
       width: 60px;
       height: 60px;
-      background-color: gray;
+      background-color: #363940;
       border-radius: 9999px;
       margin-bottom: 10px;
+      position: relative;
+      margin-top: 7px;
+
       img {
         position: absolute;
         width: 50px;
         top: 50%;
         left: 50%;
         transform: translate (-50%, -50%);
+      }
+    }
+  }
+
+  .sidebarRight {
+    background-color: #303136;
+    width: 300px;
+
+    .sidebarTop {
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      padding: 20px;
+      justify-content: space-between;
+    }
+
+    .sidebarChannels {
+      padding: 13px;
+
+      .sidebarChannelsIsHeader {
+        display: flex;
+        color: white;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 5px;
+
+        .sidebarHeader {
+          display: flex;
+
+          .sidebarAddIcon {
+            cursor: pointer;
+          }
+        }
       }
     }
   }
