--- a/src/components/sideBar/Sidebar.scss
+++ b/src/components/sideBar/Sidebar.scss
@@ -80,7 +80,8 @@
         align-items: center;
 
         img {
-          width: 60px;
+          width: 50px;
+          border-radius: 50%;
         }
 
         .accountName {
