--- a/src/components/sideBar/Sidebar.scss
+++ b/src/components/sideBar/Sidebar.scss
@@ -82,6 +82,7 @@
         img {
           width: 50px;
           border-radius: 50%;
+          cursor: pointer;
         }
 
         .accountName {
