--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: auto;
+  overflow: hidden;
 }
 
 code {
